Ya funciona todo lo de administradores